crates/k-rust-backend/tests/snapshots/measure_ratchet__be08_s1_all.snap
---
source: crates/k-rust-backend/tests/measure_ratchet.rs
description: BE08 backend counter report
---
rewrite.steps = 1
rewrite.rule_attempts = 10
rewrite.rules_applied = 10
matching.problems = 10
matching.pairs = 20
simplify.rounds = 104
simplify.invocations = 81
simplify.nodes_skipped_evaluated = 180
smt.queries = 128
smt.solver_runs = 108
smt.rlimit_count = 21843
output.kore_text.nodes_written = 333
output.kore_text.distinct_nodes = 333
output.kore_text.bytes_written = 6325
term.constructed = 170
