crates/k-rust-backend/tests/snapshots/measure_ratchet__simplifier_growth_step_8.snap
---
source: crates/k-rust-backend/tests/measure_ratchet.rs
description: simplifier work at step 8
---
rewrite.steps = 1
rewrite.rule_attempts = 1
rewrite.rules_applied = 1
matching.problems = 1
matching.pairs = 4
simplify.rounds = 7
simplify.invocations = 9
simplify.nodes_skipped_evaluated = 30
simplify.builtin_evaluations = 1
term.constructed = 15
